<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#000000" tools:context=".PauseMenu"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/evolvr"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal|top"
        android:textStyle="bold"
        android:gravity="top|center"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:typeface="monospace"
        android:textColor="#ffffff00"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainmenu"
        android:id="@+id/textView4"
        android:layout_gravity="top|center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="#ffffff00"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="1"
        android:rowCount="2"
        android:id="@+id/grid"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/difficulty"
                    android:id="@+id/textView"
                    android:layout_gravity="top|left"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    android:textColor="#ffffff00"
                    android:layout_marginBottom="10dp" />

                <RadioGroup android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/easy"
                        android:id="@+id/radioButton"
                        android:onClick="onRadioButtonClicked"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium"
                        android:id="@+id/radioButton2"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hard"
                        android:id="@+id/radioButton3"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/mapmode"
                    android:id="@+id/textView2"
                    android:layout_gravity="top|left"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    android:textColor="#ffffff00"
                    android:layout_marginBottom="10dp" />
                <RadioGroup android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:gravity="end">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/static_"
                        android:id="@+id/radioButton4"
                        android:onClick="onRadioButtonClicked"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dynamic"
                        android:id="@+id/radioButton5"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>

            </TableRow>

        </TableLayout>

    </GridLayout>

    <Button
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:text="@string/resume"
        android:id="@+id/button4"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="#ffff00"
        android:textSize="32sp"
        android:background="@drawable/buttonshape"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
