<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#000000" tools:context=".MainMenu"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/evolvr"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal|top"
        android:textStyle="bold"
        android:gravity="top|center"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:typeface="monospace"
        android:textColor="#ffffff00"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/silent"
        android:id="@+id/textView4"
        android:layout_gravity="top|center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="#ffffff00"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="1"
        android:rowCount="4"
        android:id="@+id/grid"
        android:orientation="horizontal">

        <Button
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:text="@string/play"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textColor="#ffff00"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape" />

        <Button
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:text="@string/highscores"
            android:id="@+id/button2"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textColor="#ffff00"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape" />

        <Button
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:text="@string/settings"
            android:id="@+id/button3"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textColor="#ffff00"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape" />

        <Button
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:text="@string/quit"
            android:id="@+id/button4"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textColor="#ffff00"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape" />
    </GridLayout>
</RelativeLayout>
