<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#000000" tools:context=".HighScores"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/evolvr"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal|top"
        android:textStyle="bold"
        android:gravity="top|center"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:typeface="monospace"
        android:textColor="#ffffff00"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/highscores"
        android:id="@+id/textView4"
        android:layout_gravity="top|center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="#ffffff00"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="1"
        android:rowCount="2"
        android:id="@+id/grid"
        android:orientation="horizontal">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:text="@string/pacman"
                    android:padding="3dip"
                    android:textColor="#ffffff00"
                    android:textSize="24sp" />
                <TextView
                    android:text="132"
                    android:gravity="right"
                    android:textColor="#ffffff00"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/wesley"
                    android:padding="3dip"
                    android:textColor="#ffffff00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />

                <TextView
                    android:text="124"
                    android:gravity="right"
                    android:textColor="#ffffff00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/chris"
                    android:padding="3dip"
                    android:textColor="#ffffff00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />

                <TextView
                    android:text="119"
                    android:gravity="right"
                    android:textColor="#ffffff00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/andrew"
                    android:padding="3dip"
                    android:textColor="#ffffff00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />

                <TextView
                    android:text="114"
                    android:gravity="right"
                    android:textColor="#ffffff00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/alex"
                    android:padding="3dip"
                    android:textColor="#ffffff00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />

                <TextView
                    android:text="106"
                    android:gravity="right"
                    android:textColor="#ffffff00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>

    </GridLayout>

    <Button
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:id="@+id/button4"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="#ffff00"
        android:textSize="32sp"
        android:background="@drawable/buttonshape"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
